@@ -3,8 +3,7 @@ package clone.twitter.exception.handler;
 import clone.twitter.model.exception.Error;
 import clone.twitter.model.exception.DataError;
 import clone.twitter.model.exception.RequestBodyError;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Import;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
@@ -15,26 +14,24 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static clone.twitter.constant.ExceptionConstants.RequestBodyExceptionConstants.*;
 
 @Import({Database.class, Generic.class})
 @Order(Ordered.HIGHEST_PRECEDENCE)
 @RestControllerAdvice
+@Slf4j
 public final class Validation {
-
-    private static final Logger LOGGER = LoggerFactory.getLogger(Validation.class);
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<Object> handleValidationErrors(final MethodArgumentNotValidException exception) {
 
-        LOGGER.error(INVALID_INPUT_S);
+        log.error(INVALID_INPUT_S);
 
-        final List<Object> dataErrors = exception.getFieldErrors()
+        final List<Object> dataErrors = Collections.singletonList(exception.getFieldErrors()
                 .stream()
                 .map(dataError -> new DataError(dataError.getDefaultMessage(), dataError.getCode()))
-                .collect(Collectors.toList());
+                .toList());
 
         return new ResponseEntity<>
                 (new RequestBodyError
